@@ -4,11 +4,9 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-
-MOD_STATUS_USERS="Logged-in Users"
-MOD_STATUS_DESC="This module shows the status of the logged-in users."
+MOD_STATUS_BACKEND_USERS="Logged-in back-end users"
 MOD_STATUS_LOG_OUT="Log out"
 MOD_STATUS_MESSAGES="Messages"
-MOD_STATUS_CACHE_LABEL="Caching"
-MOD_STATUS_CACHE_DESC="Select whether to cache the content of this module"
+MOD_STATUS_USERS="Logged-in Users"
 MOD_STATUS_VIEW_SITE="View Site"
+MOD_STATUS_XML_DESCRIPTION="This module shows the status of the logged-in users."
